--- a/series.conf
+++ b/series.conf
@@ -56945,6 +56945,7 @@
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
+	patches.suse/clk-core-Fix-runtime-PM-sequence-in-clk_core_unprepa.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
