--- a/series.conf
+++ b/series.conf
@@ -56947,6 +56947,7 @@
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
 	patches.suse/clk-core-Fix-runtime-PM-sequence-in-clk_core_unprepa.patch
 	patches.suse/clk-bcm-rpi-Fix-error-handling-of-raspberrypi_fw_get.patch
+	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
