--- a/series.conf
+++ b/series.conf
@@ -56934,6 +56934,7 @@
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
+	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
 	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
 	patches.suse/misc-fastrpc-fix-memory-corruption-on-probe.patch
