sched/core: Use try_cmpxchg in set_nr_{and_not,if}_polling (bnc#1202494 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -13246,6 +13246,7 @@
 	patches.suse/sched-fair-Introduce-SIS_UTIL-to-search-idle-CPU-based-on-sum-of-util_avg.patch
 	patches.suse/sched-fair-Provide-u64-read-for-32-bits-arch-helper.patch
 	patches.suse/sched-fair-Decay-task-PELT-values-during-wakeup-migration.patch
+	patches.suse/sched-core-Use-try_cmpxchg-in-set_nr_-and_not-if-_polling.patch
 	patches.suse/sched-core-Always-flush-pending-blk_plug.patch
 	patches.suse/nohz-full-sched-rt-Fix-missed-tick-reenabling-bug-in-dequeue_task_rt.patch
 	patches.suse/locking-lockdep-Fix-lockdep_init_map_-confusion.patch
