--- a/series.conf
+++ b/series.conf
@@ -10346,6 +10346,7 @@
 	patches.suse/sched-numa-Avoid-migrating-task-to-CPU-less-node.patch
 	patches.suse/sched-cpuacct-Fix-charge-percpu-cpuusage.patch
 	patches.suse/sched-rt-Plug-rt_mutex_setprio-vs-push_rt_task-race.patch
+	patches.suse/sched-numa-Fix-boot-crash-on-arm64-systems.patch
 	patches.suse/mm-fs-fix-lru_cache_disabled-race-in-bh_lru.patch
 	patches.suse/selftests-x86-fix-how-check_cc.sh-is-being-invoked.patch
 	patches.suse/mm-vmalloc-fix-comments-about-vmap_area-struct.patch
