--- a/series.conf
+++ b/series.conf
@@ -13243,6 +13243,7 @@
 	patches.suse/sched-Remove-the-limitation-of-WF_ON_CPU-on-wakelist-if-wakee-cpu-is-idle.patch
 	patches.suse/sched-fair-Remove-redundant-word.patch
 	patches.suse/sched-Remove-unused-function-group_first_cpu.patch
+	patches.suse/sched-fair-Introduce-SIS_UTIL-to-search-idle-CPU-based-on-sum-of-util_avg.patch
 	patches.suse/sched-core-Always-flush-pending-blk_plug.patch
 	patches.suse/nohz-full-sched-rt-Fix-missed-tick-reenabling-bug-in-dequeue_task_rt.patch
 	patches.suse/locking-lockdep-Fix-lockdep_init_map_-confusion.patch
