sched/numa: Avoid migrating task to CPU-less node (jsc#PED-827).

--- a/series.conf
+++ b/series.conf
@@ -10343,6 +10343,7 @@
 	patches.suse/sched-fair-Improve-consistency-of-allowed-NUMA-balance-calculations.patch
 	patches.suse/sched-fair-Adjust-the-allowed-NUMA-imbalance-when-SD_NUMA-spans-multiple-LLCs.patch
 	patches.suse/sched-numa-Fix-NUMA-topology-for-systems-with-CPU-less-nodes.patch
+	patches.suse/sched-numa-Avoid-migrating-task-to-CPU-less-node.patch
 	patches.suse/sched-cpuacct-Fix-charge-percpu-cpuusage.patch
 	patches.suse/sched-rt-Plug-rt_mutex_setprio-vs-push_rt_task-race.patch
 	patches.suse/mm-fs-fix-lru_cache_disabled-race-in-bh_lru.patch
