fuse: limit nsec (bsc#1203135).

--- a/series.conf
+++ b/series.conf
@@ -56822,6 +56822,7 @@
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/iommu-vt-d-avoid-invalid-memory-access-via-node_online-NUMA_NO_N
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
+	patches.suse/fuse-limit-nsec.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
