fuse: Remove the control interface for virtio-fs (bsc#1203137).

--- a/series.conf
+++ b/series.conf
@@ -56824,6 +56824,7 @@
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
 	patches.suse/fuse-limit-nsec.patch
 	patches.suse/fuse-ioctl-translate-ENOSYS.patch
+	patches.suse/fuse-Remove-the-control-interface-for-virtio-fs.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
