fuse: limit nsec (bsc#1203138).

--- a/series.conf
+++ b/series.conf
@@ -13878,6 +13878,7 @@
 	patches.suse/exfat-Expand-exfat_err-and-co-directly-to-pr_-macro.patch
 	patches.suse/exfat-Downgrade-ENAMETOOLONG-error-message-to-debug-.patch
 	patches.suse/exfat-Drop-superfluous-new-line-for-error-messages.patch
+	patches.suse/fuse-limit-nsec.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
 	patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch
