--- a/series.conf
+++ b/series.conf
@@ -14089,6 +14089,7 @@
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
+	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-remove-duplicated-nod.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
