ARM: dts: at91: sama5d2_icp: specify proper regulator output ranges (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14094,6 +14094,7 @@
 	patches.suse/soc-brcmstb-pm-arm-Fix-refcount-leak-and-__iomem-lea.patch
 	patches.suse/soc-fsl-select-FSL_GUTS-driver-for-DPIO.patch
 	patches.suse/ARM-dts-at91-sama5d27_wlsom1-specify-proper-regulato.patch
+	patches.suse/ARM-dts-at91-sama5d2_icp-specify-proper-regulator-ou.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
