--- a/series.conf
+++ b/series.conf
@@ -14026,6 +14026,7 @@
 	patches.suse/nouveau-explicitly-wait-on-the-fence-in-nouveau_bo_m.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
+	patches.suse/fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-error.patch
 	patches.suse/fbdev-fbcon-Properly-revert-changes-when-vc_resize-f.patch
 	patches.suse/xen-privcmd-fix-error-exit-of-privcmd_ioctl_dm_op.patch
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
