--- a/series.conf
+++ b/series.conf
@@ -14093,6 +14093,7 @@
 	patches.suse/soc-imx-gpcv2-Assert-reset-before-ungating-clock.patch
 	patches.suse/soc-brcmstb-pm-arm-Fix-refcount-leak-and-__iomem-lea.patch
 	patches.suse/soc-fsl-select-FSL_GUTS-driver-for-DPIO.patch
+	patches.suse/ARM-dts-at91-sama5d27_wlsom1-specify-proper-regulato.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
