HID: AMD_SFH: Add a DMI quirk entry for Chromebooks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14034,6 +14034,7 @@
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
 	patches.suse/HID-asus-ROG-NKey-Ignore-portion-of-0x5a-report.patch
 	patches.suse/HID-thrustmaster-Add-sparco-wheel-and-fix-array-leng.patch
+	patches.suse/HID-AMD_SFH-Add-a-DMI-quirk-entry-for-Chromebooks.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
