--- a/series.conf
+++ b/series.conf
@@ -14090,6 +14090,7 @@
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-remove-duplicated-nod.patch
+	patches.suse/soc-imx-gpcv2-Assert-reset-before-ungating-clock.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
