--- a/series.conf
+++ b/series.conf
@@ -14032,6 +14032,7 @@
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
+	patches.suse/HID-asus-ROG-NKey-Ignore-portion-of-0x5a-report.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
