--- a/series.conf
+++ b/series.conf
@@ -14095,6 +14095,7 @@
 	patches.suse/soc-fsl-select-FSL_GUTS-driver-for-DPIO.patch
 	patches.suse/ARM-dts-at91-sama5d27_wlsom1-specify-proper-regulato.patch
 	patches.suse/ARM-dts-at91-sama5d2_icp-specify-proper-regulator-ou.patch
+	patches.suse/ARM-dts-at91-sama5d27_wlsom1-don-t-keep-ldo2-enabled.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
