--- a/series.conf
+++ b/series.conf
@@ -14096,6 +14096,7 @@
 	patches.suse/ARM-dts-at91-sama5d27_wlsom1-specify-proper-regulato.patch
 	patches.suse/ARM-dts-at91-sama5d2_icp-specify-proper-regulator-ou.patch
 	patches.suse/ARM-dts-at91-sama5d27_wlsom1-don-t-keep-ldo2-enabled.patch
+	patches.suse/ARM-dts-at91-sama5d2_icp-don-t-keep-vdd_other-enable.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
