--- a/series.conf
+++ b/series.conf
@@ -14092,6 +14092,7 @@
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-remove-duplicated-nod.patch
 	patches.suse/soc-imx-gpcv2-Assert-reset-before-ungating-clock.patch
 	patches.suse/soc-brcmstb-pm-arm-Fix-refcount-leak-and-__iomem-lea.patch
+	patches.suse/soc-fsl-select-FSL_GUTS-driver-for-DPIO.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
