drm/amd/display: Fix HDMI VSIF V3 incorrect issue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13988,6 +13988,7 @@
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/drm-ttm-Fix-dummy-res-NULL-ptr-deref-bug.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
+	patches.suse/drm-amd-display-Fix-HDMI-VSIF-V3-incorrect-issue.patch
 	patches.suse/drm-amd-display-Check-correct-bounds-for-stream-enco.patch
 	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
