--- a/series.conf
+++ b/series.conf
@@ -13993,6 +13993,7 @@
 	patches.suse/drm-amd-display-For-stereo-keep-FLIP_ANY_FRAME.patch
 	patches.suse/drm-amd-display-clear-optc-underflow-before-turn-off.patch
 	patches.suse/drm-amd-pm-add-missing-fini_microcode-interface-for-.patch
+	patches.suse/drm-amd-display-Fix-pixel-clock-programming.patch
 	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
 	patches.suse/ASoC-tas2770-Set-correct-FSYNC-polarity.patch
