HID: add Lenovo Yoga C630 battery quirk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14035,6 +14035,7 @@
 	patches.suse/HID-asus-ROG-NKey-Ignore-portion-of-0x5a-report.patch
 	patches.suse/HID-thrustmaster-Add-sparco-wheel-and-fix-array-leng.patch
 	patches.suse/HID-AMD_SFH-Add-a-DMI-quirk-entry-for-Chromebooks.patch
+	patches.suse/HID-add-Lenovo-Yoga-C630-battery-quirk.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
