--- a/series.conf
+++ b/series.conf
@@ -13504,6 +13504,7 @@
 	patches.suse/drm-nouveau-acpi-Don-t-print-error-when-we-get-EINPR.patch
 	patches.suse/drm-nouveau-Don-t-pm_runtime_put_sync-only-pm_runtim.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
+	patches.suse/drm-amd-display-Avoid-MPC-infinite-loop.patch
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
 	patches.suse/vboxguest-Do-not-use-devm-for-irq.patch
 	patches.suse/misc-rtsx-Fix-an-error-handling-path-in-rtsx_pci_pro.patch
