--- a/series.conf
+++ b/series.conf
@@ -8789,6 +8789,7 @@
 	patches.suse/thunderbolt-Add-module-parameter-for-CLx-disabling.patch
 	patches.suse/usb-gadget-don-t-release-an-existing-dev-buf.patch
 	patches.suse/usb-gadget-clear-related-members-when-goto-fail.patch
+	patches.suse/usb-dwc3-dwc3-qcom-Add-missing-platform_device_put-i.patch
 	patches.suse/USB-Fix-slab-out-of-bounds-Write-bug-in-usb_hcd_poll.patch
 	patches.suse/USB-core-Fix-bug-in-resuming-hub-s-handling-of-wakeu.patch
 	patches.suse/usb-dwc3-qcom-Fix-NULL-vs-IS_ERR-checking-in-dwc3_qc.patch
