usb: dwc3: qcom: Add helper functions to enable,disable wake irqs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13607,6 +13607,7 @@
 	patches.suse/usb-xhci-tegra-Fix-error-check.patch
 	patches.suse/usb-gadget-uvc-call-uvc-uvcg_warn-on-completed-statu.patch
 	patches.suse/usb-dwc3-core-Deprecate-GCTL.CORESOFTRESET.patch
+	patches.suse/usb-dwc3-qcom-Add-helper-functions-to-enable-disable.patch
 	patches.suse/usb-host-ohci-ppc-of-Fix-refcount-leak-bug.patch
 	patches.suse/usb-renesas-Fix-refcount-leak-bug.patch
 	patches.suse/usb-dwc2-gadget-remove-D-pull-up-while-no-vbus-with-.patch
