mm: pagewalk: Fix race between unmap and page walker (git-fixes, bsc#1203159).

--- a/series.conf
+++ b/series.conf
@@ -14074,6 +14074,7 @@
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 	patches.suse/drm-i915-fix-null-pointer-dereference.patch
 	patches.suse/mmc-core-Fix-UHS-I-SD-1.8V-workaround-branch.patch
+	patches.suse/mm-pagewalk-Fix-race-between-unmap-and-page-walker.patch
 	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
 	patches.suse/clk-core-Fix-runtime-PM-sequence-in-clk_core_unprepa.patch
