usb: dwc3: qcom: fix use-after-free on runtime-PM wakeup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14055,6 +14055,7 @@
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
 	patches.suse/musb-fix-USB_MUSB_TUSB6010-dependency.patch
 	patches.suse/usb-typec-tcpm-Return-ENOTSUPP-for-power-supply-prop.patch
+	patches.suse/usb-dwc3-qcom-fix-use-after-free-on-runtime-PM-wakeu.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
