--- a/series.conf
+++ b/series.conf
@@ -14164,6 +14164,7 @@
 
 	patches.suse/nvmet-expose-max-queues-to-configfs.patch
 	patches.suse/nvme-tcp-handle-number-of-queue-changes.patch
+	patches.suse/nvme-rdma-handle-number-of-queue-changes.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
