nvme-tcp: Handle number of queue changes (bsc#1201865).

--- a/series.conf
+++ b/series.conf
@@ -14163,6 +14163,7 @@
 	patches.suse/netfilter-nf_conntrack_irc-Tighten-matching-on-DCC-m.patch
 
 	patches.suse/nvmet-expose-max-queues-to-configfs.patch
+	patches.suse/nvme-tcp-handle-number-of-queue-changes.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
