--- a/series.conf
+++ b/series.conf
@@ -12712,6 +12712,7 @@
 	patches.suse/driver-core-Fix-wait_for_device_probe-deferred_probe.patch
 	patches.suse/s390-crypto-fix-scatterwalk_unmap-callers-in-AES-GCM
 	patches.suse/s390-perf-obtain-sie_block-from-the-right-address
+	patches.suse/s390-mm-use-non-quiescing-sske-for-KVM-switch-to-keyed-guest
 	patches.suse/s390-mcck-isolate-SIE-instruction-when-setting-CIF_MCCK_GUEST-flag
 	patches.suse/dt-bindings-PCI-xilinx-cpm-Fix-reg-property-order.patch
 	patches.suse/regulator-mt6315-regulator-fix-invalid-allowed-mode.patch
