--- a/series.conf
+++ b/series.conf
@@ -7693,6 +7693,7 @@
 	patches.suse/vdpa-Consider-device-id-larger-than-31.patch
 	patches.suse/msft-hv-2484-hv-utils-add-PTP_1588_CLOCK-to-Kconfig-to-fix-build.patch
 	patches.suse/s390-kexec_file-fix-error-handling-when-applying-relocations
+	patches.suse/s390-kexec-handle-R_390_PLT32DBL-rela-in-arch_kexec_apply_relocations_add
 	patches.suse/s390-entry-fix-duplicate-tracking-of-irq-nesting-level
 	patches.suse/recordmcount.pl-look-for-jgnop-instruction-as-well-as-bcrl-on-s390.patch
 	patches.suse/ceph-fix-duplicate-increment-of-opened_inodes-metric.patch
