--- a/series.conf
+++ b/series.conf
@@ -13869,6 +13869,7 @@
 	patches.suse/KVM-PPC-Book3S-HV-Remove-kvmhv_p9_-set-restore-_lpcr.patch
 	patches.suse/KVM-PPC-Book3s-HV-Remove-unused-function-kvmppc_bad_.patch
 	patches.suse/powerpc-xive-Fix-refcount-leak-in-xive_get_max_prio.patch
+	patches.suse/s390-crash-fix-incorrect-number-of-bytes-to-copy-to-user-space
 	patches.suse/scripts-faddr2line-Fix-vmlinux-detection-on-arm64.patch
 	patches.suse/sched-core-Do-not-requeue-task-on-CPU-excluded-from-cpus_mask.patch
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
