scsi: zfcp: Fix missing auto port scan and thus missing target ports (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13985,6 +13985,7 @@
 	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 	patches.suse/scsi-lpfc-Check-the-return-value-of-alloc_workqueue.patch
+	patches.suse/scsi-zfcp-Fix-missing-auto-port-scan-and-thus-missing-target-ports
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/posix-cpu-timers-Cleanup-CPU-timers-before-freeing-t.patch
