s390/cpumf: Handle events cycles and instructions identical (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12907,6 +12907,7 @@
 	patches.suse/drm-msm-dp-check-core_initialized-before-disable-int.patch
 	patches.suse/drm-msm-dp-force-link-training-for-display-resolutio.patch
 	patches.suse/s390-crash-make-copy_oldmem_page-return-number-of-bytes-copied
+	patches.suse/s390-cpumf-Handle-events-cycles-and-instructions-identical
 	patches.suse/regmap-irq-Fix-a-bug-in-regmap_irq_enable-for-type_i.patch
 	patches.suse/regmap-irq-Fix-offset-index-mismatch-in-read_sub_irq.patch
 	patches.suse/gpio-winbond-Fix-error-code-in-winbond_gpio_get.patch
