--- a/series.conf
+++ b/series.conf
@@ -14100,6 +14100,7 @@
 	patches.suse/tty-n_gsm-avoid-call-of-sleeping-functions-from-atom.patch
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
+	patches.suse/s390-hugetlb-fix-prepare_hugepage_range-check-for-2-GB-hugepages
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-remove-duplicated-nod.patch
 	patches.suse/soc-imx-gpcv2-Assert-reset-before-ungating-clock.patch
