--- a/series.conf
+++ b/series.conf
@@ -14056,6 +14056,7 @@
 	patches.suse/musb-fix-USB_MUSB_TUSB6010-dependency.patch
 	patches.suse/usb-typec-tcpm-Return-ENOTSUPP-for-power-supply-prop.patch
 	patches.suse/usb-dwc3-qcom-fix-use-after-free-on-runtime-PM-wakeu.patch
+	patches.suse/usb-dwc3-gadget-Avoid-duplicate-requests-to-enable-R.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
