--- a/series.conf
+++ b/series.conf
@@ -6312,6 +6312,7 @@
 	patches.suse/clk-at91-clk-master-fix-prescaler-logic.patch
 	patches.suse/clk-imx-imx6ul-Move-csi_sel-mux-to-correct-base-regi.patch
 	patches.suse/clk-sunxi-ng-Unregister-clocks-resets-when-unbinding.patch
+	patches.suse/usb-gadget-f_uac2-clean-up-some-inconsistent-indenti.patch
 	patches.suse/usb-ehci-handshake-CMD_RUN-instead-of-STS_HALT.patch
 	patches.suse/USB-core-Make-do_proc_control-and-do_proc_bulk-killa.patch
 	patches.suse/usb-musb-tusb6010-check-return-value-after-calling-p.patch
