tg3: Remove redundant assignments (jsc#PED-1492).

--- a/series.conf
+++ b/series.conf
@@ -6862,6 +6862,7 @@
 	patches.suse/ice-Fix-race-conditions-between-virtchnl-handling-an.patch
 	patches.suse/bonding-Fix-a-use-after-free-problem-when-bond_sysfs.patch
 	patches.suse/net-smc-Print-function-name-in-smcr_link_down-tracepoint
+	patches.suse/tg3-Remove-redundant-assignments.patch
 	patches.suse/octeontx2-af-use-swap-to-make-code-cleaner.patch
 	patches.suse/sfc-use-swap-to-make-code-cleaner.patch
 	patches.suse/octeontx2-pf-select-CONFIG_NET_DEVLINK.patch
