cxgb3: use ndo_siocdevprivate (jsc#PED-1492).

--- a/series.conf
+++ b/series.conf
@@ -694,6 +694,7 @@
 	patches.suse/bonding-use-siocdevprivate.patch
 	patches.suse/hamachi-use-ndo_siocdevprivate.patch
 	patches.suse/qeth-use-ndo_siocdevprivate.patch
+	patches.suse/cxgb3-use-ndo_siocdevprivate.patch
 	patches.suse/ionic-minimize-resources-when-under-kdump.patch
 	patches.suse/ionic-monitor-fw-status-generation.patch
 	patches.suse/ionic-print-firmware-version-on-identify.patch
