--- a/series.conf
+++ b/series.conf
@@ -653,6 +653,7 @@
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
 	patches.suse/compat-make-linux-compat.h-available-everywhere.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
+	patches.suse/net-socket-rework-SIOC-IFMAP-ioctls.patch
 	patches.suse/octeontx2-af-Enhance-mailbox-trace-entry.patch
 	patches.suse/igb-Add-counter-to-i21x-doublecheck.patch
 	patches.suse/igb-Avoid-memcpy-over-reading-of-ETH_SS_STATS.patch
