net: tg3: fix obsolete check of !err (jsc#PED-1492).

--- a/series.conf
+++ b/series.conf
@@ -5303,6 +5303,7 @@
 	patches.suse/Bbluetooth-btusb-Add-another-Bluetooth-part-for-Real.patch
 	patches.suse/Bluetooth-btusb-Add-support-for-TP-Link-UB500-Adapte.patch
 	patches.suse/ethernet-fix-up-ps3_gelic_net.c-for-ethernet-use-eth.patch
+	patches.suse/net-tg3-fix-obsolete-check-of-err.patch
 	patches.suse/qed-Fix-spelling-mistake-ctx_bsaed-ctx_based.patch
 	patches.suse/rsi-fix-occasional-initialisation-failure-with-BT-co.patch
 	patches.suse/rsi-fix-key-enabled-check-causing-unwanted-encryptio.patch
