tg3: Read VPD with pci_vpd_alloc() (jsc#PED-1492).

--- a/series.conf
+++ b/series.conf
@@ -3006,6 +3006,7 @@
 	patches.suse/PCI-VPD-Add-pci_vpd_alloc.patch
 	patches.suse/PCI-VPD-Add-pci_vpd_find_ro_info_keyword.patch
 	patches.suse/PCI-VPD-Add-pci_vpd_check_csum.patch
+	patches.suse/tg3-Read-VPD-with-pci_vpd_alloc.patch
 	patches.suse/bnx2x-Read-VPD-with-pci_vpd_alloc.patch
 	patches.suse/bnx2x-Search-VPD-with-pci_vpd_find_ro_info_keyword.patch
 	patches.suse/bnxt-Read-VPD-with-pci_vpd_alloc.patch
