ethernet: Remove redundant statement (jsc#PED-1492).

--- a/series.conf
+++ b/series.conf
@@ -5477,6 +5477,7 @@
 	patches.suse/net-mlx5-E-Switch-Increase-supported-number-of-forwa.patch
 	patches.suse/e1000e-Remove-redundant-statement.patch
 	patches.suse/net-sched-Allow-statistics-reads-from-softirq.patch
+	patches.suse/ethernet-Remove-redundant-statement.patch
 	patches.suse/devlink-Remove-extra-device_lock-assert-checks.patch
 	patches.suse/net-sched-fix-logic-error-in-qdisc_run_begin.patch
 	patches.suse/net-sched-remove-one-pair-of-atomic-operations.patch
