tg3: Disable tg3 device on system reboot to avoid triggering AER (jsc#PED-1492).

--- a/series.conf
+++ b/series.conf
@@ -13974,6 +13974,7 @@
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
+	patches.suse/tg3-Disable-tg3-device-on-system-reboot-to-avoid-tri.patch
 
 	########################################################
 	# end of sorted patches
