net: split out SIOCDEVPRIVATE handling from dev_ioctl (jsc#PED-1492).

--- a/series.conf
+++ b/series.conf
@@ -690,6 +690,7 @@
 	patches.suse/flow_dissector-Fix-out-of-bounds-warnings.patch
 	patches.suse/ethtool-Fix-rxnfc-copy-to-user-buffer-overflow.patch
 	patches.suse/net-qed-remove-unneeded-return-variables.patch
+	patches.suse/net-split-out-SIOCDEVPRIVATE-handling-from-dev_ioctl.patch
 	patches.suse/ionic-minimize-resources-when-under-kdump.patch
 	patches.suse/ionic-monitor-fw-status-generation.patch
 	patches.suse/ionic-print-firmware-version-on-identify.patch
