--- a/series.conf
+++ b/series.conf
@@ -5348,6 +5348,7 @@
 	patches.suse/net-sysfs-try-not-to-restart-the-syscall-if-it-will-.patch
 	patches.suse/qed-Fix-compilation-for-CONFIG_QED_SRIOV-undefined-s.patch
 	patches.suse/net-tg3-fix-redundant-check-of-true-expression.patch
+	patches.suse/ethernet-tg3-remove-direct-netdev-dev_addr-writes.patch
 	patches.suse/ionic-add-filterlist-to-debugfs.patch
 	patches.suse/ionic-move-lif-mac-address-functions.patch
 	patches.suse/ionic-remove-mac-overflow-flags.patch
