mm: pagewalk: Fix race between unmap and page walker (git-fixes, bsc#1203159).

--- a/series.conf
+++ b/series.conf
@@ -22947,6 +22947,7 @@
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
+	patches.suse/mm-pagewalk-Fix-race-between-unmap-and-page-walker.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
