- net: socket: simplify dev_ifconf handling (jsc#PED-1492). - Refresh   patches.suse/net-don-t-unconditionally-copy_from_user-a-struct-if.patch.

--- a/series.conf
+++ b/series.conf
@@ -655,6 +655,7 @@
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
 	patches.suse/net-socket-rework-SIOC-IFMAP-ioctls.patch
 	patches.suse/net-socket-remove-register_gifconf.patch
+	patches.suse/net-socket-simplify-dev_ifconf-handling.patch
 	patches.suse/octeontx2-af-Enhance-mailbox-trace-entry.patch
 	patches.suse/igb-Add-counter-to-i21x-doublecheck.patch
 	patches.suse/igb-Avoid-memcpy-over-reading-of-ETH_SS_STATS.patch
