--- a/series.conf
+++ b/series.conf
@@ -656,6 +656,7 @@
 	patches.suse/net-socket-rework-SIOC-IFMAP-ioctls.patch
 	patches.suse/net-socket-remove-register_gifconf.patch
 	patches.suse/net-socket-simplify-dev_ifconf-handling.patch
+	patches.suse/net-socket-rework-compat_ifreq_ioctl.patch
 	patches.suse/octeontx2-af-Enhance-mailbox-trace-entry.patch
 	patches.suse/igb-Add-counter-to-i21x-doublecheck.patch
 	patches.suse/igb-Avoid-memcpy-over-reading-of-ETH_SS_STATS.patch
