--- a/series.conf
+++ b/series.conf
@@ -695,6 +695,7 @@
 	patches.suse/hamachi-use-ndo_siocdevprivate.patch
 	patches.suse/qeth-use-ndo_siocdevprivate.patch
 	patches.suse/cxgb3-use-ndo_siocdevprivate.patch
+	patches.suse/dev_ioctl-pass-SIOCDEVPRIVATE-data-separately.patch
 	patches.suse/ionic-minimize-resources-when-under-kdump.patch
 	patches.suse/ionic-monitor-fw-status-generation.patch
 	patches.suse/ionic-print-firmware-version-on-identify.patch
