--- a/series.conf
+++ b/series.conf
@@ -57015,6 +57015,7 @@
 	patches.suse/SUNRPC-xprt-async-tasks-mustn-t-block-waiting-for-me.patch
 	patches.suse/VFS-filename_create-fix-incorrect-intent.patch
         patches.suse/nvme-consider-also-host_iface-when-checking-ip-options.patch
+	patches.suse/nvmet-expose-max-queues-to-configfs.patch
 	patches.suse/ath9k-fix-use-after-free-in-ath9k_hif_usb_rx_cb.patch
 	patches.suse/netfilter-nf_tables-stricter-validation-of-element-d.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
