nvme-rdma: Handle number of queue changes (bsc#1201865).

--- a/series.conf
+++ b/series.conf
@@ -57017,6 +57017,7 @@
         patches.suse/nvme-consider-also-host_iface-when-checking-ip-options.patch
 	patches.suse/nvmet-expose-max-queues-to-configfs.patch
 	patches.suse/nvme-tcp-handle-number-of-queue-changes.patch
+	patches.suse/nvme-rdma-handle-number-of-queue-changes.patch
 	patches.suse/ath9k-fix-use-after-free-in-ath9k_hif_usb_rx_cb.patch
 	patches.suse/netfilter-nf_tables-stricter-validation-of-element-d.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
