--- a/series.conf
+++ b/series.conf
@@ -6339,6 +6339,7 @@
 	patches.suse/thunderbolt-Enable-retry-logic-for-intra-domain-cont.patch
 	patches.suse/thunderbolt-Fix-Wrestrict-warning.patch
 	patches.suse/USB-iowarrior-fix-control-message-timeouts.patch
+	patches.suse/USB-serial-ch314-use-usb_control_msg_recv.patch
 	patches.suse/USB-serial-keyspan-fix-memleak-on-probe-errors.patch
 	patches.suse/usb-gadget-Mark-USB_FSL_QE-broken-on-64-bit.patch
 	patches.suse/staging-wfx-ensure-IRQ-is-ready-before-enabling-it.patch
