--- a/series.conf
+++ b/series.conf
@@ -14066,6 +14066,7 @@
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
 	patches.suse/usb-cdns3-fix-incorrect-handling-TRB_SMM-flag-for-IS.patch
 	patches.suse/usb-cdns3-fix-issue-with-rearming-ISO-OUT-endpoint.patch
+	patches.suse/USB-serial-ch341-fix-lost-character-on-LCR-updates.patch
 	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
 	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
