--- a/series.conf
+++ b/series.conf
@@ -14067,6 +14067,7 @@
 	patches.suse/usb-cdns3-fix-incorrect-handling-TRB_SMM-flag-for-IS.patch
 	patches.suse/usb-cdns3-fix-issue-with-rearming-ISO-OUT-endpoint.patch
 	patches.suse/USB-serial-ch341-fix-lost-character-on-LCR-updates.patch
+	patches.suse/USB-serial-ch341-fix-disabled-rx-timer-on-older-devi.patch
 	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
 	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
