--- a/series.conf
+++ b/series.conf
@@ -651,6 +651,7 @@
 	patches.suse/ionic-cleanly-release-devlink-instance.patch
 	patches.suse/net-usb-asix-ax88772-add-missing-stop.patch
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
+	patches.suse/compat-make-linux-compat.h-available-everywhere.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
 	patches.suse/octeontx2-af-Enhance-mailbox-trace-entry.patch
 	patches.suse/igb-Add-counter-to-i21x-doublecheck.patch
