--- a/series.conf
+++ b/series.conf
@@ -14185,6 +14185,7 @@
 	patches.suse/nvmet-expose-max-queues-to-configfs.patch
 	patches.suse/nvme-tcp-handle-number-of-queue-changes.patch
 	patches.suse/nvme-rdma-handle-number-of-queue-changes.patch
+	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
