nvme-tcp: fix UAF when detecting digest errors (bsc#1200313 bsc#1201489).

--- a/series.conf
+++ b/series.conf
@@ -57018,6 +57018,7 @@
 	patches.suse/nvmet-expose-max-queues-to-configfs.patch
 	patches.suse/nvme-tcp-handle-number-of-queue-changes.patch
 	patches.suse/nvme-rdma-handle-number-of-queue-changes.patch
+	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 	patches.suse/ath9k-fix-use-after-free-in-ath9k_hif_usb_rx_cb.patch
 	patches.suse/netfilter-nf_tables-stricter-validation-of-element-d.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
