--- a/series.conf
+++ b/series.conf
@@ -7159,6 +7159,7 @@
 	patches.suse/RDMA-nldev-Check-stat-attribute-before-accessing-it.patch
 	patches.suse/scsi-ufs-core-Improve-SCSI-abort-handling
 	patches.suse/scsi-core-sysfs-Fix-hang-when-device-state-is-set-via-sysfs
+	patches.suse/scsi-ufs-core-Fix-task-management-completion-timeout-race.patch
 	patches.suse/scsi-qla2xxx-Fix-mailbox-direction-flags-in-qla2xxx_get_adapter_id
 	patches.suse/ata-ahci-Add-Green-Sardine-vendor-ID-as-board_ahci_m.patch
 	patches.suse/ata-libahci-Adjust-behavior-when-StorageD3Enable-_DS.patch
