--- a/series.conf
+++ b/series.conf
@@ -13739,6 +13739,7 @@
 	patches.suse/scsi-lpfc-Remove-Menlo-Hornet-related-code.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.5.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.5-patches.patch
+	patches.suse/scsi-smartpqi-Fix-DMA-direction-for-RAID-requests.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-display-of-max-frame-size.patch
 	patches.suse/scsi-qla2xxx-Zero-undefined-mailbox-IN-registers.patch
 	patches.suse/scsi-qla2xxx-Fix-response-queue-handler-reading-stal.patch
