--- a/series.conf
+++ b/series.conf
@@ -13174,6 +13174,7 @@
 	patches.suse/ima-Fix-a-potential-integer-overflow-in-ima_appraise.patch
 	patches.suse/ima-force-signature-verification-when-CONFIG_KEXEC_S.patch
 	patches.suse/ima-Fix-potential-memory-leak-in-ima_init_crypto.patch
+	patches.suse/net-stmmac-dwc-qos-Disable-split-header-for-Tegra194.patch
 	patches.suse/net-sock-tracing-Fix-sock_exceed_buf_limit-not-to-de.patch
 	patches.suse/sysctl-Fix-data-races-in-proc_dointvec.patch
 	patches.suse/sysctl-Fix-data-races-in-proc_douintvec.patch
