--- a/series.conf
+++ b/series.conf
@@ -11799,6 +11799,7 @@
 	patches.suse/can-grcan-only-use-the-NAPI-poll-budget-for-RX.patch
 	patches.suse/net-ethernet-mediatek-add-missing-of_node_put-in-mtk.patch
 	patches.suse/hinic-fix-bug-of-wq-out-of-bound-access.patch
+	patches.suse/net-stmmac-disable-Split-Header-SPH-for-Intel-platfo.patch
 	patches.suse/nfc-replace-improper-check-device_is_registered-in-n.patch
 	patches.suse/nfc-nfcmrvl-main-reorder-destructive-operations-in-n.patch
 	patches.suse/selftests-mirror_gre_bridge_1q-Avoid-changing-PVID-w.patch
