--- a/series.conf
+++ b/series.conf
@@ -14080,6 +14080,7 @@
 	patches.suse/usb-dwc3-qcom-fix-use-after-free-on-runtime-PM-wakeu.patch
 	patches.suse/usb-dwc3-gadget-Avoid-duplicate-requests-to-enable-R.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
+	patches.suse/usb-gadget-f_uac2-fix-superspeed-transfer.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
