x86/cpu: Add new Alderlake and Raptorlake CPU model numbers (jsc#PED-743).

--- a/series.conf
+++ b/series.conf
@@ -11748,6 +11748,7 @@
 	patches.suse/objtool-fix-sibling-call-detection-in-alternatives.patch
 	patches.suse/objtool-Fix-type-of-reloc-addend.patch
 	patches.suse/objtool-Fix-code-relocs-vs-weak-symbols.patch
+	patches.suse/x86-cpu-Add-new-Alderlake-and-Raptorlake-CPU-model-n.patch
 	patches.suse/x86-cpu-load-microcode-during-restore_processor_state.patch
 	patches.suse/hwmon-f71882fg-Fix-negative-temperature.patch
 	patches.suse/hwmon-pmbus-disable-PEC-if-not-enabled.patch
