PCI: vmd: Add DID 8086:A77F for all Intel Raptor Lake SKU's (jsc#PED-633).

--- a/series.conf
+++ b/series.conf
@@ -9034,6 +9034,7 @@
 	patches.suse/PCI-mvebu-Fix-support-for-DEVCAP2-DEVCTL2-and-LNKCTL.patch
 	patches.suse/PCI-vmd-Clean-up-domain-before-enumeration.patch
 	patches.suse/PCI-vmd-Honor-ACPI-_OSC-on-PCIe-features.patch
+	patches.suse/PCI-vmd-Add-DID-8086-A77F-for-all-Intel-Raptor-Lake-.patch
 	patches.suse/PCI-pci-bridge-emul-Make-expansion-ROM-Base-Address-.patch
 	patches.suse/PCI-pci-bridge-emul-Properly-mark-reserved-PCIe-bits.patch
 	patches.suse/PCI-pci-bridge-emul-Fix-definitions-of-reserved-bits.patch
