--- a/series.conf
+++ b/series.conf
@@ -13236,6 +13236,7 @@
 	patches.suse/revert-x86-sev-expose-sev_es_ghcb_hv_call-for-use-by-hyperv.patch
 	patches.suse/docs-kernel-parameters-Update-descriptions-for-mitig.patch
 	patches.suse/x86-fpu-Add-a-helper-to-prepare-AMX-state-for-low-po.patch
+	patches.suse/intel_idle-Add-a-new-flag-to-initialize-the-AMX-stat.patch
 	patches.suse/arm64-Do-not-forget-syscall-when-starting-a-new-thre.patch
 	patches.suse/arm64-fix-oops-in-concurrently-setting-insn_emulatio.patch
 	patches.suse/arm64-kasan-Revert-arm64-mte-reset-the-page-tag-in-p.patch
