platform/x86/intel: pmc: Support Intel Raptorlake P (jsc#PED-667).

--- a/series.conf
+++ b/series.conf
@@ -12773,6 +12773,7 @@
 	patches.suse/gpio-dwapb-Don-t-print-error-on-EPROBE_DEFER.patch
 	patches.suse/cifs-fix-reconnect-on-smb3-mount-types.patch
 	patches.suse/scripts-gdb-change-kernel-config-dumping-method.patch
+	patches.suse/platform-x86-intel-pmc-Support-Intel-Raptorlake-P.patch
 	patches.suse/platform-x86-gigabyte-wmi-Add-Z690M-AORUS-ELITE-AX-D.patch
 	patches.suse/platform-x86-gigabyte-wmi-Add-support-for-B450M-DS3H.patch
 	patches.suse/0001-Documentation-Add-documentation-for-Processor-MMIO-S.patch
