--- a/series.conf
+++ b/series.conf
@@ -13877,6 +13877,7 @@
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
 	patches.suse/pinctrl-qcom-sm8250-Fix-PDC-map.patch
+	patches.suse/Makefile-link-with-z-noexecstack-no-warn-rwx-segment.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/ceph-use-correct-index-when-encoding-client-supported-features.patch
 	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
