--- a/series.conf
+++ b/series.conf
@@ -3110,6 +3110,7 @@
 	patches.suse/ceph-fix-dereference-of-null-pointer-cf.patch
 	patches.suse/SUNRPC-don-t-pause-on-incomplete-allocation.patch
 	patches.suse/SUNRPC-improve-error-response-to-over-size-gss-crede.patch
+	patches.suse/PCI-VMD-ACPI-Make-ACPI-companion-lookup-work-for-VMD.patch
 	patches.suse/ACPI-PM-s2idle-Run-both-AMD-and-Microsoft-methods-if.patch
 	patches.suse/platform-chrome-sensorhub-Add-trace-events-for-sampl.patch
 	patches.suse/platform-chrome-cros_ec_proto-Send-command-again-whe.patch
