USB: serial: ch341: name prescaler, divisor registers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -37658,6 +37658,7 @@
 	patches.suse/USB-iowarrior-fix-up-report-size-handling-for-some-d.patch
 	patches.suse/xhci-dbc-Make-function-xhci_dbc_ring_alloc-static.patch
 	patches.suse/xhci-dbgtty-Make-some-functions-static.patch
+	patches.suse/USB-serial-ch341-name-prescaler-divisor-registers.patch
 	patches.suse/USB-serial-cp210x-enable-usb-generic-throttle-unthro.patch
 	patches.suse/USB-serial-cp210x-re-enable-auto-RTS-on-open.patch
 	patches.suse/USB-serial-ftdi_sio-make-process-packet-buffer-unsig.patch
