net: mscc: ocelot: fix missing unlock on error in ocelot_hwstamp_set() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7413,6 +7413,7 @@
 	patches.suse/wireguard-receive-use-ring-buffer-for-incoming-hands.patch
 	patches.suse/wireguard-receive-drop-handshakes-if-queue-lock-is-c.patch
 	patches.suse/wireguard-ratelimiter-use-kvcalloc-instead-of-kvzall.patch
+	patches.suse/net-mscc-ocelot-fix-missing-unlock-on-error-in-ocelo.patch
 	patches.suse/net-marvell-mvpp2-Fix-the-computation-of-shared-CPUs.patch
 	patches.suse/ice-xsk-clear-status_error0-for-each-allocated-desc.patch
 	patches.suse/dpaa2-eth-destroy-workqueue-at-the-end-of-remove-fun.patch
