usb: Prepare cleanup of powerpc's asm/prom.h (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -12658,6 +12658,7 @@
 	patches.suse/serial-stm32-usart-Correct-CSIZE-bits-and-parity.patch
 	patches.suse/usb-usbip-fix-a-refcount-leak-in-stub_probe.patch
 	patches.suse/usb-usbip-add-missing-device-lock-on-tweak-configura.patch
+	patches.suse/usb-Prepare-cleanup-of-powerpc-s-asm-prom.h.patch
 	patches.suse/USB-host-isp116x-check-return-value-after-calling-pl.patch
 	patches.suse/USB-storage-karma-fix-rio_karma_init-return.patch
 	patches.suse/usb-musb-Fix-missing-of_node_put-in-omap2430_probe.patch
