- net: axienet: reset core on initialization prior to MDIO access   (git-fixes). - Refresh   patches.suse/net-axienet-setup-mdio-unconditionally.patch.

--- a/series.conf
+++ b/series.conf
@@ -9171,6 +9171,7 @@
 	patches.suse/bpf-selftests-Add-various-ringbuf-tests-with-invalid.patch
 	patches.suse/net-axienet-increase-reset-timeout.patch
 	patches.suse/net-axienet-Wait-for-PhyRstCmplt-after-core-reset.patch
+	patches.suse/net-axienet-reset-core-on-initialization-prior-to-MD.patch
 	patches.suse/net-axienet-add-missing-memory-barriers.patch
 	patches.suse/net-axienet-limit-minimum-TX-ring-size.patch
 	patches.suse/net-axienet-Fix-TX-ring-slot-available-check.patch
