--- a/series.conf
+++ b/series.conf
@@ -9734,6 +9734,7 @@
 	patches.suse/dpaa2-eth-Initialize-mutex-used-in-one-step-timestam.patch
 	patches.suse/bonding-fix-data-races-around-agg_select_timer.patch
 	patches.suse/CDC-NCM-avoid-overflow-in-sanity-checking.patch
+	patches.suse/net-dsa-lantiq_gswip-fix-use-after-free-in-gswip_rem.patch
 	patches.suse/net-usb-cdc_mbim-avoid-altsetting-toggling-for-Telit-21e8a96377e6.patch
 	patches.suse/ping-fix-the-dif-and-sdif-check-in-ping_lookup.patch
 	patches.suse/Revert-net-ethernet-bgmac-Use-devm_platform_ioremap_.patch
