net: dsa: microchip: fix bridging with more than two member ports (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9837,6 +9837,7 @@
 	patches.suse/ice-fix-concurrent-reset-and-removal-of-VFs.patch
 	patches.suse/ice-check-the-return-of-ice_ptp_gettimex64.patch
 	patches.suse/ice-initialize-local-variable-tlv.patch
+	patches.suse/net-dsa-microchip-fix-bridging-with-more-than-two-me.patch
 	patches.suse/bnxt_en-Fix-active-FEC-reporting-to-ethtool.patch
 	patches.suse/bnxt_en-Fix-offline-ethtool-selftest-with-RDMA-enabl.patch
 	patches.suse/bnxt_en-Fix-occasional-ethtool-t-loopback-test-failu.patch
