tty: remove CMSPAR ifdefs (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -12645,6 +12645,7 @@
 	patches.suse/serial-sifive-Report-actual-baud-base-rather-than-fi.patch
 	patches.suse/serial-pch-don-t-overwrite-xmit-buf-0-by-x_char.patch
 	patches.suse/tty-n_gsm-Fix-packet-data-hex-dump-output.patch
+	patches.suse/tty-remove-CMSPAR-ifdefs.patch
 	patches.suse/serial-meson-acquire-port-lock-in-startup.patch
 	patches.suse/serial-msm_serial-disable-interrupts-in-__msm_consol.patch
 	patches.suse/serial-8250_fintek-Check-SER_RS485_RTS_-only-with-RS.patch
