--- a/series.conf
+++ b/series.conf
@@ -12159,6 +12159,7 @@
 	patches.suse/selftests-resctrl-Fix-null-pointer-dereference-on-op.patch
 	patches.suse/kselftest-cgroup-fix-test_stress.sh-to-use-OUTPUT-di.patch
 	patches.suse/bnx2x-Fix-undefined-behavior-due-to-shift-overflowin.patch
+	patches.suse/bnx2x-Fix-spelling-mistake-regiser-register.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
