net: bna: Update supported link modes (jsc#PED-1521).

--- a/series.conf
+++ b/series.conf
@@ -8315,6 +8315,7 @@
 	patches.suse/bpf-Adjust-BTF-log-size-limit.patch
 	patches.suse/bpf-Disallow-BPF_LOG_KERNEL-log-level-for-bpf-BPF_BTF_LOAD.patch
 	patches.suse/bpf-Remove-config-check-to-enable-bpf-support-for-branch-records.patch
+	patches.suse/net-bna-Update-supported-link-modes.patch
 	patches.suse/u64_stats-Disable-preemption-on-32bit-UP-SMP-PREEMPT.patch
 	patches.suse/ARM-dts-qcom-sdx55-fix-IPA-interconnect-definitions.patch
 	patches.suse/net-dev-Always-serialize-on-Qdisc-busylock-in-__dev_.patch
