--- a/series.conf
+++ b/series.conf
@@ -10831,6 +10831,7 @@
 	patches.suse/Bluetooth-Fix-use-after-free-in-hci_send_acl.patch
 	patches.suse/Bluetooth-call-hci_le_conn_failed-with-hdev-lock-in-.patch
 	patches.suse/Bluetooth-btmtksdio-Fix-kernel-oops-in-btmtksdio_int.patch
+	patches.suse/bnx2x-truncate-value-to-original-sizing.patch
 	patches.suse/bpf-Add-check_func_arg_reg_off-function.patch
 	patches.suse/bpf-Fix-PTR_TO_BTF_ID-var_off-check.patch
 	patches.suse/bpf-Disallow-negative-offset-in-check_ptr_off_reg.patch
