--- a/series.conf
+++ b/series.conf
@@ -976,6 +976,7 @@
 	patches.suse/octeontx2-pf-Don-t-install-VLAN-offload-rule-if-netd.patch
 	patches.suse/octeontx2-pf-Fix-algorithm-index-in-MCAM-rules-with-.patch
 	patches.suse/octeontx2-af-cn10k-Use-FLIT0-register-instead-of-FLI.patch
+	patches.suse/bnx2-Replace-open-coded-version-with-swab32s.patch
 	patches.suse/cxgb4-Validate-VPD-checksum-with-pci_vpd_check_csum.patch
 	patches.suse/cxgb4-Remove-unused-vpd_param-member-ec.patch
 	patches.suse/cxgb4-Search-VPD-with-pci_vpd_find_ro_info_keyword.patch
