--- a/series.conf
+++ b/series.conf
@@ -13976,6 +13976,7 @@
 	patches.suse/posix-cpu-timers-Cleanup-CPU-timers-before-freeing-t.patch
 	patches.suse/regulator-pca9450-Remove-restrictions-for-regulator-.patch
 	patches.suse/spi-meson-spicc-add-local-pow2-clock-ops-to-preserve.patch
+	patches.suse/bnx2x-Fix-comment-typo.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.suse/drm-nouveau-recognise-GA103.patch
