--- a/series.conf
+++ b/series.conf
@@ -8269,6 +8269,7 @@
 	patches.suse/ixgbevf-Rename-MSGTYPE-to-SUCCESS-and-FAILURE.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
 	patches.suse/bnx2x-Use-struct_group-for-memcpy-region.patch
+	patches.suse/bnx2x-constify-static-inline-stub-for-dev_addr.patch
 	patches.suse/ethtool-add-support-to-set-get-rx-buf-len-via-ethtoo.patch
 	patches.suse/ethtool-extend-ringparam-setting-getting-API-with-rx.patch
 	patches.suse/msft-hv-2484-net-mana-Add-XDP-support.patch
