--- a/series.conf
+++ b/series.conf
@@ -10659,6 +10659,7 @@
 	patches.suse/net-dsa-mv88e6xxx-Enable-port-policy-support-on-6097.patch
 	patches.suse/msft-hv-2523-net-mana-Add-handling-of-CQE_RX_TRUNCATED.patch
 	patches.suse/msft-hv-2524-net-mana-Remove-unnecessary-check-of-cqe_type-in-man.patch
+	patches.suse/bnx2x-Replace-one-element-array-with-flexible-array-.patch
 	patches.suse/net-asix-add-proper-error-handling-of-usb-read-error.patch
 	patches.suse/igc-avoid-kernel-warning-when-changing-RX-ring-param.patch
 	patches.suse/igb-refactor-XDP-registration.patch
