--- a/series.conf
+++ b/series.conf
@@ -10823,6 +10823,7 @@
 	patches.suse/can-isotp-support-MSG_TRUNC-flag-when-reading-from-s.patch
 	patches.suse/bareudp-use-ipv6_mod_enabled-to-check-if-IPv6-enable.patch
 	patches.suse/net-stmmac-clean-up-impossible-condition.patch
+	patches.suse/bnx2x-use-correct-format-characters.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
