--- a/series.conf
+++ b/series.conf
@@ -8511,6 +8511,7 @@
 	patches.suse/bna-Simplify-DMA-setting.patch
 	patches.suse/vmxnet3-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/be2net-Remove-useless-DMA-32-fallback-configuration.patch
+	patches.suse/bnx2x-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/can-gs_usb-fix-use-of-uninitialized-variable-detach-.patch
 	patches.suse/can-isotp-convert-struct-tpcon-idx-len-to-unsigned-i.patch
 	patches.suse/ppp-ensure-minimum-packet-size-in-ppp_write.patch
