--- a/series.conf
+++ b/series.conf
@@ -3010,6 +3010,7 @@
 	patches.suse/tg3-Read-VPD-with-pci_vpd_alloc.patch
 	patches.suse/tg3-Validate-VPD-checksum-with-pci_vpd_check_csum.patch
 	patches.suse/tg3-Search-VPD-with-pci_vpd_find_ro_info_keyword.patch
+	patches.suse/bnx2-Search-VPD-with-pci_vpd_find_ro_info_keyword.patch
 	patches.suse/bnx2x-Read-VPD-with-pci_vpd_alloc.patch
 	patches.suse/bnx2x-Search-VPD-with-pci_vpd_find_ro_info_keyword.patch
 	patches.suse/bnxt-Read-VPD-with-pci_vpd_alloc.patch
