--- a/series.conf
+++ b/series.conf
@@ -8256,6 +8256,7 @@
 	patches.suse/tcp-avoid-indirect-calls-to-sock_rfree.patch
 	patches.suse/tcp-defer-skb-freeing-after-socket-lock-is-released.patch
 	patches.suse/tcp-do-not-call-tcp_cleanup_rbuf-if-we-have-a-backlo.patch
+	patches.suse/net-move-gro-definitions-to-include-net-gro.h.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
