bnx2x: fix driver load from initrd (jsc#PED-535).

--- a/series.conf
+++ b/series.conf
@@ -9862,6 +9862,7 @@
 	patches.suse/net-mlx5e-Add-missing-increment-of-count.patch
 	patches.suse/Revert-xen-netback-remove-hotplug-status-once-it-has.patch
 	patches.suse/Revert-xen-netback-Check-for-hotplug-status-existenc.patch
+	patches.suse/bnx2x-fix-driver-load-from-initrd.patch
 	patches.suse/net-smc-Use-a-mutex-for-locking-struct-smc_pnettable
 	patches.suse/openvswitch-Fix-setting-ipv6-fields-causing-hw-csum-.patch
 	patches.suse/Revert-i40e-Fix-reset-bw-limit-when-DCB-enabled-with.patch
