--- a/series.conf
+++ b/series.conf
@@ -14106,6 +14106,7 @@
 	patches.suse/USB-serial-option-add-Quectel-EM060K-modem.patch
 	patches.suse/USB-serial-ftdi_sio-add-Omron-CS1W-CIF31-device-id.patch
 	patches.suse/USB-serial-option-add-support-for-Cinterion-MV32-WA--8ffe20d08f2c.patch
+	patches.suse/USB-serial-cp210x-add-Decagon-UCA-device-id.patch
 	patches.suse/USB-serial-ch341-fix-lost-character-on-LCR-updates.patch
 	patches.suse/USB-serial-ch341-fix-disabled-rx-timer-on-older-devi.patch
 	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
