clk: bcm: rpi: Use correct order for the parameters of devm_kcalloc() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12462,6 +12462,7 @@
 	patches.suse/PCI-rockchip-Fix-find_first_zero_bit-limit.patch
 	patches.suse/PCI-vmd-Assign-VMD-IRQ-domain-before-enumeration.patch
 	patches.suse/PCI-vmd-Revert-2565e5b69c44-PCI-vmd-Do-not-disable-M.patch
+	patches.suse/clk-bcm-rpi-Use-correct-order-for-the-parameters-of-.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-the-RTC-hclock-description.patch
 	patches.suse/clk-tegra-Add-missing-reset-deassertion.patch
 	patches.suse/clk-imx-Add-check-for-kcalloc.patch
