drm/i915: Skip wm/ddb readout for disabled pipes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14125,6 +14125,7 @@
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 	patches.suse/drm-i915-fix-null-pointer-dereference.patch
 	patches.suse/drm-i915-glk-ECS-Liva-Q2-needs-GLK-HDMI-port-timing-.patch
+	patches.suse/drm-i915-Skip-wm-ddb-readout-for-disabled-pipes.patch
 	patches.suse/mmc-core-Fix-UHS-I-SD-1.8V-workaround-branch.patch
 	patches.suse/mm-pagewalk-Fix-race-between-unmap-and-page-walker.patch
 	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
