wifi: mac80211: Fix UAF in ieee80211_scan_rx() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14076,6 +14076,7 @@
 	patches.suse/ALSA-hda-intel-nhlt-Correct-the-handling-of-fmt_conf.patch
 	patches.suse/ALSA-hda-realtek-Add-speaker-AMP-init-for-Samsung-la.patch
 	patches.suse/ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-HD-Aud.patch
+	patches.suse/wifi-mac80211-Fix-UAF-in-ieee80211_scan_rx.patch
 	patches.suse/wifi-mac80211-Don-t-finalize-CSA-in-IBSS-mode-if-sta.patch
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
