usb: xhci-mtk: relax TT periodic bandwidth allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14092,6 +14092,7 @@
 	patches.suse/usb-dwc3-pci-Add-support-for-Intel-Raptor-Lake.patch
 	patches.suse/usb-dwc3-gadget-Avoid-duplicate-requests-to-enable-R.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
+	patches.suse/usb-xhci-mtk-relax-TT-periodic-bandwidth-allocation.patch
 	patches.suse/usb-gadget-f_uac2-fix-superspeed-transfer.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
