mmc: core: Fix inconsistent sd3_bus_mode at UHS-I SD voltage switch failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14127,6 +14127,7 @@
 	patches.suse/drm-i915-glk-ECS-Liva-Q2-needs-GLK-HDMI-port-timing-.patch
 	patches.suse/drm-i915-Skip-wm-ddb-readout-for-disabled-pipes.patch
 	patches.suse/mmc-core-Fix-UHS-I-SD-1.8V-workaround-branch.patch
+	patches.suse/mmc-core-Fix-inconsistent-sd3_bus_mode-at-UHS-I-SD-v.patch
 	patches.suse/mm-pagewalk-Fix-race-between-unmap-and-page-walker.patch
 	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
