--- a/series.conf
+++ b/series.conf
@@ -14094,6 +14094,7 @@
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/usb-xhci-mtk-relax-TT-periodic-bandwidth-allocation.patch
 	patches.suse/usb-gadget-f_uac2-fix-superspeed-transfer.patch
+	patches.suse/USB-cdc-acm-Add-Icom-PMR-F3400-support-0c26-0020.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
