USB: serial: ftdi_sio: add Omron CS1W-CIF31 device id (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14104,6 +14104,7 @@
 	patches.suse/usb-cdns3-fix-issue-with-rearming-ISO-OUT-endpoint.patch
 	patches.suse/USB-serial-option-add-support-for-OPPO-R11-diag-port.patch
 	patches.suse/USB-serial-option-add-Quectel-EM060K-modem.patch
+	patches.suse/USB-serial-ftdi_sio-add-Omron-CS1W-CIF31-device-id.patch
 	patches.suse/USB-serial-ch341-fix-lost-character-on-LCR-updates.patch
 	patches.suse/USB-serial-ch341-fix-disabled-rx-timer-on-older-devi.patch
 	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
