net: axienet: fix RX ring refill allocation failure handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10711,6 +10711,7 @@
 	patches.suse/Bluetooth-Fix-not-checking-for-valid-hdev-on-bt_dev_.patch
 	patches.suse/Bluetooth-use-memset-avoid-memory-leaks.patch
 	patches.suse/Bluetooth-btusb-Add-another-Realtek-8761BU.patch
+	patches.suse/net-axienet-fix-RX-ring-refill-allocation-failure-ha.patch
 	patches.suse/bnxt_en-Eliminate-unintended-link-toggle-during-FW-r.patch
 	patches.suse/bnxt_en-Do-not-destroy-health-reporters-during-reset.patch
 	patches.suse/ixgbe-add-the-ability-for-the-PF-to-disable-VF-link-.patch
