net: stmmac: dwmac-qcom-ethqos: add platform level clocks management (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8268,6 +8268,7 @@
 	patches.suse/Bluetooth-bfusb-fix-division-by-zero-in-send-path.patch
 	patches.suse/Bluetooth-stop-proccessing-malicious-adv-data.patch
 	patches.suse/Bluetooth-btusb-enable-Mediatek-to-support-AOSP-exte.patch
+	patches.suse/net-stmmac-dwmac-qcom-ethqos-add-platform-level-cloc.patch
 	patches.suse/ixgbevf-Rename-MSGTYPE-to-SUCCESS-and-FAILURE.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
 	patches.suse/msft-hv-2484-net-mana-Add-XDP-support.patch
