s390/qeth: set static link info during initialization (bsc#1202984 LTC#199607).

--- a/series.conf
+++ b/series.conf
@@ -46820,6 +46820,7 @@
 	patches.suse/ionic-useful-names-for-booleans.patch
 	patches.suse/s390-qeth-tolerate-error-when-querying-card-info
 	patches.suse/s390-qeth-improve-QUERY-CARD-INFO-processing
+	patches.suse/s390-qeth-set-static-link-info-during-initialization
 	patches.suse/enetc-Fix-endianness-issues-for-enetc_qos.patch
 	patches.suse/ibmvnic-Introduce-indirect-subordinate-Command-Respo.patch
 	patches.suse/ibmvnic-Introduce-batched-RX-buffer-descriptor-trans.patch
