s390/qeth: improve selection of ethtool link modes (bsc#1202984 LTC#199607).

--- a/series.conf
+++ b/series.conf
@@ -46823,6 +46823,7 @@
 	patches.suse/s390-qeth-set-static-link-info-during-initialization
 	patches.suse/s390-qeth-clean-up-default-cases-for-ethtool-link-mode
 	patches.suse/s390-qeth-use-QUERY-OAT-for-initial-link-info
+	patches.suse/s390-qeth-improve-selection-of-ethtool-link-modes
 	patches.suse/enetc-Fix-endianness-issues-for-enetc_qos.patch
 	patches.suse/ibmvnic-Introduce-indirect-subordinate-Command-Respo.patch
 	patches.suse/ibmvnic-Introduce-batched-RX-buffer-descriptor-trans.patch
