bnxt: adding bnxt_xdp_build_skb to build skb from multibuffer xdp_buff (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -12220,6 +12220,7 @@
 	patches.suse/bnxt-set-xdp_buff-pfmemalloc-flag-if-needed.patch
 	patches.suse/bnxt-change-receive-ring-space-parameters.patch
 	patches.suse/bnxt-add-page_pool-support-for-aggregation-ring-when.patch
+	patches.suse/bnxt-adding-bnxt_xdp_build_skb-to-build-skb-from-mul.patch
 	patches.suse/bnx2x-Fix-spelling-mistake-regiser-register.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
