bnxt: refactor bnxt_rx_pages operate on skb_shared_info (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -12214,6 +12214,7 @@
 	patches.suse/bnx2x-Fix-undefined-behavior-due-to-shift-overflowin.patch
 	patches.suse/bnxt-refactor-bnxt_rx_xdp-to-separate-xdp_init_buff-.patch
 	patches.suse/bnxt-add-flag-to-denote-that-an-xdp-program-is-curre.patch
+	patches.suse/bnxt-refactor-bnxt_rx_pages-operate-on-skb_shared_in.patch
 	patches.suse/bnx2x-Fix-spelling-mistake-regiser-register.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
