RDMA/bnxt_re: Fix endianness warning for req.pkey (jsc#PED-1494).

--- a/series.conf
+++ b/series.conf
@@ -8887,6 +8887,7 @@
 	patches.suse/RDMA-bnxt_re-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/RDMA-hns-Modify-the-mapping-attribute-of-doorbell-to.patch
 	patches.suse/RDMA-uverbs-Remove-the-unnecessary-assignment.patch
+	patches.suse/RDMA-bnxt_re-Fix-endianness-warning-for-req.pkey.patch
 	patches.suse/RDMA-rxe-Remove-the-unnecessary-variable.patch
 	patches.suse/RDMA-qedr-Fix-reporting-max_-send-recv-_wr-attrs.patch
 	patches.suse/RDMA-core-Let-ib_find_gid-continue-search-even-after.patch
