ethtool: handle info/flash data copying outside rtnl_lock (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -5788,6 +5788,7 @@
 	patches.suse/msft-hv-2475-net-mana-Improve-the-HWC-error-handling.patch
 	patches.suse/msft-hv-2476-net-mana-Support-hibernation-and-kexec.patch
 	patches.suse/ethtool-push-the-rtnl_lock-into-dev_ethtool.patch
+	patches.suse/ethtool-handle-info-flash-data-copying-outside-rtnl_.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
