bnxt_en: Support configurable CQE coalescing mode (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -8486,6 +8486,7 @@
 	patches.suse/bnxt_en-Add-event-handler-for-PAUSE-Storm-event.patch
 	patches.suse/bnxt_en-Log-error-report-for-dropped-doorbell.patch
 	patches.suse/bnxt_en-enable-interrupt-sampling-on-5750X-for-DIM.patch
+	patches.suse/bnxt_en-Support-configurable-CQE-coalescing-mode.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the-.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-IDs-for-WCN6855.patch
 	patches.suse/Bluetooth-refactor-malicious-adv-data-check.patch
