bnxt_en: improve VF error messages when PF is unavailable (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -8531,6 +8531,7 @@
 	patches.suse/Bluetooth-L2CAP-uninitialized-variables-in-l2cap_soc.patch
 	patches.suse/iwlwifi-mvm-Use-div_s64-instead-of-do_div-in-iwl_mvm.patch
 	patches.suse/bnxt_en-add-dynamic-debug-support-for-HWRM-messages.patch
+	patches.suse/bnxt_en-improve-VF-error-messages-when-PF-is-unavail.patch
 	patches.suse/bnxt_en-use-firmware-provided-max-timeout-for-messag.patch
 	patches.suse/bna-Simplify-DMA-setting.patch
 	patches.suse/vmxnet3-Remove-useless-DMA-32-fallback-configuration.patch
