bnxt_en: fix NQ resource accounting during vf creation on 57500 chips (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -14087,6 +14087,7 @@
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
 	patches.suse/bnxt_en-Use-PAGE_SIZE-to-init-buffer-when-multi-buff.patch
 	patches.suse/bnxt_en-set-missing-reload-flag-in-devlink-features.patch
+	patches.suse/bnxt_en-fix-NQ-resource-accounting-during-vf-creatio.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
