bnxt: report header-data split state (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -10681,6 +10681,7 @@
 	patches.suse/bnxt_en-Handle-async-event-when-the-PHC-is-updated-i.patch
 	patches.suse/dt-bindings-net-xgmac_mdio-Remove-unsupported-bus-fr.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
+	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the--2e7b4a328ed6.patch
 	patches.suse/Bluetooth-btusb-Whitespace-fixes-for-btusb_setup_csr.patch
