bnxt_en: implement hw health reporter (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -10754,6 +10754,7 @@
 	patches.suse/bnxt_en-Properly-report-no-pause-support-on-some-car.patch
 	patches.suse/bnxt_en-Eliminate-unintended-link-toggle-during-FW-r.patch
 	patches.suse/bnxt_en-Do-not-destroy-health-reporters-during-reset.patch
+	patches.suse/bnxt_en-implement-hw-health-reporter.patch
 	patches.suse/batman-adv-Use-netif_rx.patch
 	patches.suse/ixgbe-add-the-ability-for-the-PF-to-disable-VF-link-.patch
 	patches.suse/ixgbe-add-improvement-for-MDD-response-functionality.patch
