bnxt_en: Add event handler for PAUSE Storm event (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -8483,6 +8483,7 @@
 	patches.suse/ath9k-Fix-out-of-bound-memcpy-in-ath9k_hif_usb_rx_st.patch
 	patches.suse/ath11k-Fix-napi-related-hang.patch
 	patches.suse/rtw89-8852a-correct-bit-definition-of-dfs_en.patch
+	patches.suse/bnxt_en-Add-event-handler-for-PAUSE-Storm-event.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the-.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-IDs-for-WCN6855.patch
 	patches.suse/Bluetooth-refactor-malicious-adv-data-check.patch
