ethtool: runtime-resume netdev parent before ethtool ioctl ops (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -765,6 +765,7 @@
 	patches.suse/bnxt_en-Don-t-use-static-arrays-for-completion-ring-.patch
 	patches.suse/bnxt_en-Increase-maximum-RX-ring-size-if-jumbo-ring-.patch
 	patches.suse/virtio-net-realign-page_to_skb-after-merges.patch
+	patches.suse/ethtool-runtime-resume-netdev-parent-before-ethtool-.patch
 	patches.suse/natsemi-sonic-stop-calling-netdev_boot_setup_check.patch
 	patches.suse/ax88796-export-ax_NS8390_init-hook.patch
 	patches.suse/xsurf100-drop-include-of-lib8390.c.patch
