eth: bnxt: make ulp_id unsigned to make GCC 12 happy (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -12268,6 +12268,7 @@
 	patches.suse/iwlwifi-fw-init-SAR-GEO-table-only-if-data-is-presen.patch
 	patches.suse/iwlwifi-mvm-fix-assert-1F04-upon-reconfig.patch
 	patches.suse/can-mcp251xfd-silence-clang-s-Wunaligned-access-warn.patch
+	patches.suse/eth-bnxt-make-ulp_id-unsigned-to-make-GCC-12-happy.patch
 	patches.suse/Bluetooth-fix-dangling-sco_conn-and-use-after-free-i.patch
 	patches.suse/Bluetooth-hci_qca-Use-del_timer_sync-before-freeing.patch
 	patches.suse/Bluetooth-use-hdev-lock-in-activate_scan-for-hci_is_.patch
